# llaunchpad

./: CHANGELOG.md  Cargo.toml  README.md  bundle.sh
.github/workflows/: release.yml
src/: config.rs  controller.rs  main.rs  model.rs  repository.rs  slint_generated.rs  test_util.rs  view.rs
src/ollama/: agents.rs  launch.rs  logos.rs  mod.rs  models.rs
ui/: app.slint  app.slint.bak
