[package]
name = "llaunchpad"
version = "0.5.0"
edition = "2021"
description = "A cross-platform launcher for Ollama coding agents with cloud models"
license = "MIT"
repository = "https://github.com/draugvar/llaunchpad"

[dependencies]
slint = "1.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1"

[build-dependencies]
slint-build = "1.8"
